add product info endpoint